Se integran pruebas unitarias para el modulo service y pruebas de integracion en el modulo api